--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -13,3 +13,8 @@
   annotate = yes
 [init]
   defaultBranch = master
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
