Foot: Adjust font and theme

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-# font=monospace:size=8
+font=Iosevka:style=Bold:pixelsize=12:antialias=true:autohint=true
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -37,6 +37,8 @@
 # workers=<number of logical CPUs>
 # utmp-helper=/usr/lib/utempter/utempter  # When utmp backend is ‘libutempter’ (Linux)
 # utmp-helper=/usr/libexec/ulog-helper    # When utmp backend is ‘ulog’ (FreeBSD)
+
+include=/usr/share/foot/themes/nord
 
 [environment]
 # name=value
